--- a/frontend/public/pages/profil.html
+++ b/frontend/public/pages/profil.html
@@ -28,7 +28,7 @@
     <li><span id="deconnexion"><i class="fas fa-sign-out-alt"></i></span></li>
   </ul> 
 </div> 
-      <main class="col-12 col-sm-12 col-lg-11">
+      <main class="col-12 col-sm-12 col-md-11">
         <nav class="nav_int row">
           <a id="messages" href="./messages.html" class="col-4" aria-label="Partage d'articles" title="Partage d'articles">
             <div class="nav--circle--profil bgsecondary txtwhite footer_fontsize text-center">
@@ -43,12 +43,12 @@
             </div>
           </div>
           <a id="partage--profil" href="#" class="col-4" aria-label="Partage d'images et vidéos"><div class="nav--circle bgsecondary txtwhite footer_fontsize text-center"><i class="fas fa-file-image"></i></div></a>
-          <section id="options" class="col-12 col-sm-12 col-lg-6 hidden">
+          <section id="options" class="col-12 col-sm-12 col-md-6 hidden">
             <div class="row">
             <div class="col-1"></div>
-            <div id="update-profil" class="cursor col-5 col-sm-5 col-lg-3" aria-label="Modifiez votre profil"><div class="circle-moyen bgsecondary text-center"><i class="fas fa-pencil-alt"></i></div></div>
-            <div id="delete-profil" class="cursor col-5 col-sm-5 col-lg-2" aria-label="Supprimez votre profil"><div class="circle-moyen bgsecondary text-center"><i class="fas fa-trash"></i></div></div>
-            <div class="col-1 col-sm-1 col-lg-7"></div>
+            <div id="update-profil" class="cursor col-5 col-sm-5 col-md-3" aria-label="Modifiez votre profil"><div class="circle-moyen bgsecondary text-center"><i class="fas fa-pencil-alt"></i></div></div>
+            <div id="delete-profil" class="cursor col-5 col-sm-5 col-md-2" aria-label="Supprimez votre profil"><div class="circle-moyen bgsecondary text-center"><i class="fas fa-trash"></i></div></div>
+            <div class="col-1 col-sm-1 col-md-7"></div>
             </div>
           </section>
         </nav>
@@ -63,23 +63,23 @@
         <div id="footer_rond" class="footer_rond"><img id="fleche_footer" src="../img/fleche_footer.svg" aria-label="Cliquez pour faire apparaître le footer" /></div>
         <div id="footer_barre" class="footer_barre col-12 col-sm-12 pt-2">
           <div class="row mb-2">
-           <a href="./pages/informations.html?info=contact" class="col-2 col-sm-2" aria-label="Conctatez-nous">
+           <a href="./informations.html?info=contact" class="col-2 col-sm-2" aria-label="Conctatez-nous">
              <div class="litlecircle footer_fontsize text-center">
                <i class="fas fa-envelope"></i>
              </div>
            </a>
-           <a href="./pages/informations.html?info=comment" class="col-2 col-sm-2 ml-0" aria-label="Envoyez-nous un commentaire">
+           <a href="./informations.html?info=comment" class="col-2 col-sm-2 ml-0" aria-label="Envoyez-nous un commentaire">
              <div class="litlecircle footer_fontsize text-center">
                <i class="fas fa-comment"></i>
              </div>
            </a>
             <div class="col-4 col-sm-4 text-center pt-2 pl-0 pr-0 valign">&copy; Groupomania 2021</div> 
-            <a href="./pages/informations.html?info=mentions" class="col-2 col-sm-2" aria-label="Découvrez les mentions légales et le plan du site">
+            <a href="./informations.html?info=mentions" class="col-2 col-sm-2" aria-label="Découvrez les mentions légales et le plan du site">
              <div class="litlecircle footer_fontsize text-center mr-0">
                <i class="fas fa-book"></i>
              </div>
            </a>
-            <a href="./pages/informations.html?info=help" class="col-2 col-sm-2" aria-label="Besoin d'aide ?">
+            <a href="./informations.html?info=help" class="col-2 col-sm-2" aria-label="Besoin d'aide ?">
              <div class="litlecircle footer_fontsize text-center txtblue txtweight">?</div>
            </a>
          </div>
