--- a/frontend/public/pages/informations.html
+++ b/frontend/public/pages/informations.html
@@ -8,32 +8,39 @@
     <link href="../assets/css/int.css" rel="stylesheet">
     <link href="../assets/css/int-m.css" rel="stylesheet">
     <link href="../assets/css/int-d.css" rel="stylesheet">
-    <link href="../assets/css/style-m.css" rel="stylesheet">
     <link href="../assets/css/info.css" rel="stylesheet">
+    <link href="../assets/css/info-d.css" rel="stylesheet">
     <link href="../assets/css/fontawesome/css/all.min.css" rel="stylesheet">
     <link rel="icon" type="image/jpg" href="../img/favicon.jpg" /> 
   </head>
  <body>
     <div id="backgroung--body"></div>
-  <header>
-    <div id="header_int">
-    <div id="logo_int" aria-label="Logo Groupomania Intranet"></div>
-    </div>
-</header>   
-      <main class="col-12 col-sm-12 col-lg-11">
-        <nav class="nav_int row">
-          <div class="col-4" aria-label="Partage d'articles" title="Partage d'articles">
-            <a id="messages" href="./messages.html"><div class="nav--circle bgsecondary txtwhite footer_fontsize text-center" aria-label="Voir les messages récents">
-                <div class="row">
-              <div class="message1"><i class="fas fa-file-alt"></i></div>
-              <div class="notin-message2"><i class="fas fa-file-alt"></i></div>
-            </div>
+    <header>
+      <div id="header_int">
+      <div id="logo_int" aria-label="Logo Groupomania Intranet"></div>
+      </div>
+  </header>   
+  <div id="dropdown--profil">
+    <p><i class="fas fa-user-alt txtwhite cursor"></i></p>
+    <ul id="items_profil" class="hidden">
+      <li><a id="profil" href="./profil.html"><i class="fas fa-user-alt"></i></a></li>
+      <li><span id="deconnexion"><i class="fas fa-sign-out-alt"></i></span></li>
+    </ul> 
+  </div>   
+  <main class="col-12 col-sm-12 col-lg-11">
+    <nav class="nav_int row">
+      <div class="col-4" aria-label="Partage d'articles" title="Partage d'articles">
+        <a href="./messages.html"><div id="circle--messages" class="nav--circle footer_fontsize text-center">
+          <div class="row">
+            <div class="message1"><i class="fas fa-file-alt"></i></div>
+            <div class="message2"><i class="fas fa-file-alt"></i></div>
           </div>
-        </a>
-          </div>
-          <div id="select" class="cursor col-4 pt-3" aria-label="Options d'affichage"><div class="nav--circle footer_fontsize text-center" aria-label="Sélecteur sous forme de flèche"><i class="fas fa-caret-down"></i></div></div>
-          <a href="#" id="circle--images" class="col-4" aria-label="Partage d'images et vidéos"><div class="nav--circle bgsecondary txtwhite footer_fontsize text-center"><i class="fas fa-file-image"></i></div></a>
-        </nav>
+        </div>
+      </a>
+      </div>
+      <div id="select" class="cursor col-4 pt-3" aria-label="Options d'affichage"><div class="nav--circle footer_fontsize text-center" aria-label="Sélecteur sous forme de flèche"><i class="fas fa-caret-down"></i></div></div>
+      <a href="#" id="circle--images" class="col-4" aria-label="Partage d'images et vidéos"><div class="nav--circle bgsecondary txtwhite footer_fontsize text-center"><i class="fas fa-file-image"></i></div></a>
+    </nav>
         <section id="infos" class="row hidden">
             <div class="col-1 mr-4"></div>
             <div id="contact--info" class="col-2 picto--infos">
@@ -67,43 +74,51 @@
                 </p>
             </article>
             <article id="comment" class="hidden">
-                <h2 class="text-center txtweight mb-2">Commentaires</h2>
+                <h2 class="text-center txtweight">Commentaires</h2>
                 <p>Vous souhaitez donner votre avis sur l'application ?</p>
                 <p>Avec votre aide, l’équipe Groupomania Intranet la rend encore meilleure.</p>
-                <p class="mt-3"><b>Comment pouvons-nous l'améliorer ?</b></p>
-                <div id="amelioration" class="col-12">
-                    <textarea id="text--amelioration" class="col-12" placeholder="Donnez-nous le maximum d'informations"></textarea>
-                    <div class="row reponse">
-                        <div class="col-2"></div>
-                        <div class="col-2">
-                            <div class="litlecircle text-center" aria-label="Annulez">X</div>
+                <div class="col-12 col-sm-12 col-md-11 row mt-3">
+                    <div class="col-12 col-sm-12 col-md-6">
+                        <b>Comment l'améliorer ?</b>
+                        <div id="amelioration" class="col-12">
+                            <textarea id="text--amelioration" class="col-12" placeholder="Donnez-nous le maximum d'informations"></textarea>
+                            <div class="row reponse">
+                                <div class="col-2"></div>
+                                <div class="col-2">
+                                    <div class="litlecircle text-center cursor" aria-label="Annulez">X</div>
+                                </div>
+                                <div class="col-4"></div>
+                                <a href="mailto:retour.intranet@groupomania.fr" class="col-2">
+                                    <div class="litlecircle text-center" aria-label="Envoyez votre commentaire">
+                                        <i class="fas fa-check"></i>
+                                    </div>
+                                </a>
+                                <div class="col-2"></div>
+                            </div>   
+                        </div>                        
+                    </div>
+                    
+                    <div class="col-12 col-sm-12 col-md-6">
+                        <b>Quelque chose ne fonctionne pas ?</b>
+                        <div id="fonctionnement" class="col-12">
+                            <textarea id="text--fonctionnement" class="col-12" placeholder="Donnez-nous le maximum d'informations"></textarea>
+                            <div class="row reponse">
+                                <div class="col-2"></div>
+                                <div class="col-2">
+                                    <div class="litlecircle text-center cursor" aria-label="Annulez">X</div>
+                                </div>
+                                <div class="col-4"></div>
+                                <a href="mailto:retour.intranet@groupomania.fr" class="col-2">
+                                    <div class="litlecircle text-center" aria-label="Envoyez votre commentaire">
+                                        <i class="fas fa-check"></i>
+                                    </div>
+                                </a>
+                                <div class="col-2"></div>
+                            </div>   
                         </div>
-                        <div class="col-4"></div>
-                        <a href="mailto:retour.intranet@groupomania.fr" class="col-2">
-                            <div class="litlecircle text-center" aria-label="Envoyez votre commentaire">
-                                <i class="fas fa-check"></i>
-                            </div>
-                        </a>
-                        <div class="col-2"></div>
-                    </div>   
+                    </div>
                 </div>
-                <p class="mt-3"><b>Quelque chose ne fonctionne pas ?</b></p>
-                <div id="fonctionnement" class="col-12">
-                    <textarea id="text--fonctionnement" class="col-12" placeholder="Donnez-nous le maximum d'informations"></textarea>
-                    <div class="row reponse">
-                        <div class="col-2"></div>
-                        <div class="col-2">
-                            <div class="litlecircle text-center" aria-label="Annulez">X</div>
-                        </div>
-                        <div class="col-4"></div>
-                        <a href="mailto:retour.intranet@groupomania.fr" class="col-2">
-                            <div class="litlecircle text-center" aria-label="Envoyez votre commentaire">
-                                <i class="fas fa-check"></i>
-                            </div>
-                        </a>
-                        <div class="col-2"></div>
-                    </div>   
-                </div>                <p class="text-justify">Nous sommes ravis de recevoir des commentaires, mais malheureusement nous ne pouvons pas répondre aux questions directement. 
+                <p class="col-12 col-sm-12 col-md-10 text-justify">Nous sommes ravis de recevoir des commentaires, mais malheureusement nous ne pouvons pas répondre aux questions directement. 
                 Si vous avez besoin d’aide, rendez-vous dans la partie Aide de l'application.</p>
             </article>
             <article id="mentions" class="hidden">
